# Splinter3D

./: .choco-dependencies  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.md  Main.cpp  README.md  docker-compose-prebuilt.yml  docker-compose.yml  splinter  vcpkg.json
.github/: CODEOWNERS  README.md  dependabot.yml
.github/workflows/: backmerge-main-to-dev.yml  ci-linux.yml  ci-macos.yml  ci-release.yml  ci-windows.yml  compile-on-pr.yml  main-pr-policy.yml  pre-commit-on-pr.yml  prepare-release-pr.yml  reusable-build.yml  tag-on-merge.yml  windows-package.yml
.github/workflows/scripts/: build.ps1  install.ps1  next-tag.sh
Locale/es/LC_MESSAGES/: splinter3D.mo  splinter3D.po
Locale/fr/LC_MESSAGES/: splinter3D.mo  (+1 more)
Panels/: ButtonsPanel.hpp  CheckRadioPanel.hpp  ListsPanel.hpp  SlidersPanel.hpp  TextPanel.hpp  ViewerPanel.hpp
Wx/: Ids.hpp  Wx.hpp
Wx/Config/: Config.hpp
Wx/Events/: BindBasic.cpp  BindBasic.hpp  BindEvents.cpp  BindEvents.hpp  BindFont.cpp  BindFont.hpp  BindLang.hpp
Wx/Locale/: Locale.hpp
Wx/Occt/: OcctCanvas.hpp  OcctExporter.hpp  OcctLoader.hpp  SkyboxRenderer.hpp
Wx/Theme/: Theme.hpp
Wx/Utils/: SwitchLanguage.cpp  SwitchLanguage.hpp
Wx/Widgets/: Button.hpp  CheckRadio.hpp  Dialogs.hpp  TextInput.hpp
assets/: Splinter3D.icns  keybindings.json
build_Visual_Studio_17_2022/: vcpkg_init.cmake
cmake/: 1-Options.cmake  2-Optimizations.cmake  3-Warnings.cmake  3-WarningsWindows.cmake  4-External.cmake  4-ExternalWindows.cmake  5-Sources.cmake  6-Linker.cmake  7-Language.cmake  7-Locale.cmake  7-Target.cmake  8-Target.cmake
docker/: entrypoint.sh
include/Geometry/: BBox.hpp  Mesh.hpp  Ray.hpp  Triangle.hpp  Vec3.hpp
include/Gui/: AGuiComponent.hpp  Button.hpp  CenteredToolbar.hpp  CenterredToolBar.hpp  IGuiComponent.hpp  ToolbarButton.hpp
include/Input/: Action.hpp  Actions.hpp  InputBindings.hpp  InputManager.hpp
include/Objects3D/: OMesh.hpp  OTriangle.hpp  OVec3.hpp  Object3D.hpp  ObjectObserver.hpp  Transform.hpp
include/Renderer/: Color.hpp  IRenderer.hpp  ITexture.hpp  Palette.hpp  RMesh.hpp  RTriangle.hpp  RVec3.hpp  RayGUI.hpp  RaylibRenderer.hpp  RenderObject.hpp  Vec3.hpp
include/Scene/: Scene.hpp  SceneObject.hpp
include/Splinter/: Api.hpp  Version.hpp
include/Splinter3D/: Api.hpp
locale/: de.json  en.json  es.json  fr.json
objects3D/src/: OMesh.cpp
renderer/src/: RMesh.cpp  RaylibRenderer.cpp
scripts/: build-and-package.ps1  build.ps1  build.sh  check-locales.py  check-versions.sh  clean.sh  install.ps1  install.sh  release.sh
scripts/build.sh.d/: configure_build.sh  rules.sh  run.sh  unit_tests.sh  vcpkg.sh
src/: main.cpp  old_main.cpp
src/Geometry/: BBox.cpp  Mesh.cpp
src/Gui/: Button.cpp  CenteredToolBar.cpp  CenterredToolBar.cpp  ToolbarButton.cpp
src/Input/: Action.cpp  InputBindings.cpp  InputManager.cpp
src/Objects3D/: OMesh.cpp  Object3D.cpp  Transform.cpp
src/Renderer/: RMesh.cpp  RayGUI.cpp  RaylibRenderer.cpp  RenderObject.cpp
src/Scene/: Scene.cpp  SceneObject.cpp
src/src/: RaylibRenderer.cpp
wxwidgets/: .gitignore
wxwidgets/Panels/: DialogsPanel.hpp
(+88 files in other folders)
